--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@ body {
 }
 
 section {
-    padding: 6rem;
+    padding: 6rem 0;
 }
 
 a {
@@ -456,10 +456,10 @@ textarea {
     outline-color: #fd57bf;
 }
 
-input [type="submit"] {
+input[type="submit"] {
     width: initial;
-    background-color: white;
-    color: black;
+    background-color: #fd57bf;
+    color: #eee;
     padding: 1rem 2rem;
     border: none;
     border-radius: 0.8rem;
@@ -467,12 +467,15 @@ input [type="submit"] {
     transition: background-color 650ms;
 }
 
-input [type="submit"]:hover {
+input[type="submit"]:hover {
     color: #221e3f;
     background-color: #ffe838;
 
 }
 
+/*End contact*/
+
+/*Start footer*/
 .copyright {
     width: 100%;
     text-align: center;
@@ -489,20 +492,64 @@ input [type="submit"]:hover {
     top: -2.5rem;
     right: 5rem;
     border-radius: 100%;
+    display: flex;
+    animation: pulse 2s infinite;
+    cursor: pointer;
 }
 
 .up i {
-    color: #221e3f;
+    color: #16162d;
     font-size: 2rem;
+    margin: auto;
 }
 
-/*End contact*/
+.copyright p {
+    font-size: 1.4rem;
+}
 
-/*Start footer*/
 /*End footer*/
 
 /*Start animations*/
+@keyframes pulse {
+    0% {
+        box-shadow: 0 0 0 0 rgba(253, 87, 191, 0.99);
+    }
+
+    70% {
+        box-shadow: 0 0 0 2rem rgba(253, 87, 191, 0);
+    }
+
+    100% {
+        box-shadow: 0 0 0 0 rgba(253, 87, 191, 0);
+    }
+}
+
 /*End animations*/
 
 /*Start media queries*/
+
+@media screen and (max-width: 768px) {
+    body {
+
+        background: url("Images/sitebg2.jpg") no-repeat center fixed;
+        background-size: cover;
+    }
+
+    .landing-text h1 {
+        font-size: 15rem;
+    }
+
+    .landing-text h6 {
+        font-size: 1.7rem;
+    }
+
+    .nav-list {
+        flex-direction: column;
+    }
+
+    li {
+        margin: 2rem 0;
+    }
+}
+
 /*End media queries*/
