--- a/main.css
+++ b/main.css
@@ -17,6 +17,8 @@ body {
     height: 100%;
     background: #1E1F20 no-repeat center fixed;
     background-size: cover;
+    display: flex;
+    flex-direction: column;
 }
 
 section {
@@ -648,20 +650,25 @@ input[type="submit"]:hover {
 
 
 /* Style the tab */
+
+
+
 .tab {
     float: left;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
-    width: 30%;
-    height: 300px;
+    border-left: 5px solid#00F2AE;
+    background-color: #2A2B2D;
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    height: 30rem;
 }
 
 /* Style the buttons inside the tab */
 .tab button {
-    display: block;
+    display: flex;
     background-color: inherit;
-    color: black;
-    padding: 22px 16px;
+    color: white;
+    padding: 15px 25px;
     width: 100%;
     border: none;
     outline: none;
@@ -673,7 +680,8 @@ input[type="submit"]:hover {
 
 /* Change background color of buttons on hover */
 .tab button:hover {
-    background-color: #ddd;
+    background-color: rgb(77, 77, 77);
+    border-left: 20px solid #00F2AE;
 }
 
 /* Create an active/current "tab button" class */
@@ -686,7 +694,7 @@ input[type="submit"]:hover {
     float: left;
     padding: 0px 12px;
     border: 1px solid #ccc;
-    width: 70%;
+    width: 50%;
     border-left: none;
-    height: 300px;
+    height: 30rem;
 }
