--- a/main.css
+++ b/main.css
@@ -1,3 +1,332 @@
+*,
+*:before,
+*:after {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+#wrapper {
+    padding-top: 5%;
+}
+
+.viewport {
+    -webkit-perspective: 800px;
+    -moz-perspective: 800px;
+    -ms-perspective: 800px;
+    -o-perspective: 800px;
+    perspective: 800px;
+    -webkit-perspective-origin: 50% 200px;
+    -moz-perspective-origin: 50% 200px;
+    -ms-perspective-origin: 50% 200px;
+    -o-perspective-origin: 50% 200px;
+    perspective-origin: 50% 200px;
+    -webkit-transform: scale(0.8, 0.8);
+    -moz-transform: scale(0.8, 0.8);
+    -ms-transform: scale(0.8, 0.8);
+    -o-transform: scale(0.8, 0.8);
+    transform: scale(0.8, 0.8);
+    -webkit-box-reflect: below 170px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(0%, transparent), to(rgba(250, 250, 250, 0.1)));
+}
+
+.cube {
+    position: relative;
+    margin: 0 auto;
+    height: 200px;
+    width: 200px;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
+    -o-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-transform: rotateX(136deg) rotateY(1122deg);
+    -moz-transform: rotateX(136deg) rotateY(1122deg);
+    -ms-transform: rotateX(136deg) rotateY(1122deg);
+    -o-transform: rotateX(136deg) rotateY(1122deg);
+    transform: rotateX(136deg) rotateY(1122deg);
+}
+
+.cube>div {
+    overflow: hidden;
+    position: absolute;
+    opacity: 0.9;
+    height: 200px;
+    width: 200px;
+    background-image: url("http://jordizle.com/static/img/blank.png");
+    -webkit-touch-callout: none;
+    -moz-touch-callout: none;
+    -ms-touch-callout: none;
+    -o-touch-callout: none;
+    touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+
+.cube>div>div.cube-image {
+    width: 200px;
+    height: 200px;
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    transform: rotate(180deg);
+    line-height: 190px;
+    font-size: 25px;
+    font-family: 'IBM Plex Mono', monospace;
+    text-align: center;
+    color: #ffffff;
+    -webkit-transition: color 600ms;
+    -moz-transition: color 600ms;
+    -ms-transition: color 600ms;
+    -o-transition: color 600ms;
+    transition: color 600ms;
+}
+
+.cube>div>div.cube-image.active {
+    color: rgb(0, 0, 0);
+}
+
+.cube>div:hover {
+    cursor: pointer;
+}
+
+.cube>div:active {
+    cursor: pointer;
+}
+
+.cube>div:first-child {
+    -webkit-transform: rotateX(90deg) translateZ(100px);
+    -moz-transform: rotateX(90deg) translateZ(100px);
+    -ms-transform: rotateX(90deg) translateZ(100px);
+    -o-transform: rotateX(90deg) translateZ(100px);
+    transform: rotateX(90deg) translateZ(100px);
+    outline: 1px solid transparent;
+}
+
+.cube>div:nth-child(2) {
+    -webkit-transform: translateZ(100px);
+    -moz-transform: translateZ(100px);
+    -ms-transform: translateZ(100px);
+    -o-transform: translateZ(100px);
+    transform: translateZ(100px);
+    outline: 1px solid transparent;
+}
+
+.cube>div:nth-child(3) {
+    -webkit-transform: rotateY(90deg) translateZ(100px);
+    -moz-transform: rotateY(90deg) translateZ(100px);
+    -ms-transform: rotateY(90deg) translateZ(100px);
+    -o-transform: rotateY(90deg) translateZ(100px);
+    transform: rotateY(90deg) translateZ(100px);
+    outline: 1px solid transparent;
+}
+
+.cube>div:nth-child(4) {
+    -webkit-transform: rotateY(180deg) translateZ(100px);
+    -moz-transform: rotateY(180deg) translateZ(100px);
+    -ms-transform: rotateY(180deg) translateZ(100px);
+    -o-transform: rotateY(180deg) translateZ(100px);
+    transform: rotateY(180deg) translateZ(100px);
+    outline: 1px solid transparent;
+}
+
+.cube>div:nth-child(5) {
+    -webkit-transform: rotateY(-90deg) translateZ(100px);
+    -moz-transform: rotateY(-90deg) translateZ(100px);
+    -ms-transform: rotateY(-90deg) translateZ(100px);
+    -o-transform: rotateY(-90deg) translateZ(100px);
+    transform: rotateY(-90deg) translateZ(100px);
+    outline: 1px solid transparent;
+}
+
+.cube>div:nth-child(6) {
+    -webkit-transform: rotateX(-90deg) rotate(180deg) translateZ(100px);
+    -moz-transform: rotateX(-90deg) rotate(180deg) translateZ(100px);
+    -ms-transform: rotateX(-90deg) rotate(180deg) translateZ(100px);
+    -o-transform: rotateX(-90deg) rotate(180deg) translateZ(100px);
+    transform: rotateX(-90deg) rotate(180deg) translateZ(100px);
+    outline: 1px solid transparent;
+}
+
+object {
+    opacity: 0.3;
+}
+
+object:hover {
+    opacity: 1;
+}
+
+@media (max-width: 640px) {
+    .viewport {
+        -webkit-transform: scale(0.6, 0.6);
+        -moz-transform: scale(0.6, 0.6);
+        -ms-transform: scale(0.6, 0.6);
+        -o-transform: scale(0.6, 0.6);
+        transform: scale(0.6, 0.6);
+    }
+}
+
+.block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.text {
+    color: #00F2AE;
+    font-size: 12px;
+    font-weight: 300;
+}
+
+.font {
+    font-family: 'IBM Plex Mono', monospace;
+}
+
+.dimension {
+    -webkit-perspective: 500px;
+    perspective: 500px;
+    -webkit-perspective-origin: center center;
+    perspective-origin: center center;
+    display: flex;
+    align-items: center;
+    ;
+}
+
+.side {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    border: 5px solid #00F2AE;
+    opacity: .7;
+    -webkit-animation: color 7s cubic-bezier(0.75, 0, 0.5, 1) infinite;
+    animation: color 7s cubic-bezier(0.75, 0, 0.5, 1) infinite;
+}
+
+@-webkit-keyframes rotate {
+    0% {
+        -webkit-transform: rotateX(90deg);
+        transform: rotateX(90deg);
+    }
+
+    25% {
+        -webkit-transform: rotateY(90deg);
+        transform: rotateY(90deg);
+    }
+
+    50% {
+        -webkit-transform: rotateZ(90deg);
+        transform: rotateZ(90deg);
+    }
+
+    75% {
+        -webkit-transform: rotateY(90deg);
+        transform: rotateY(90deg);
+    }
+
+    100% {
+        -webkit-transform: rotateX(90deg);
+        transform: rotateX(90deg);
+    }
+}
+
+@keyframes rotate {
+    0% {
+        -webkit-transform: rotateX(90deg);
+        transform: rotateX(90deg);
+    }
+
+    25% {
+        -webkit-transform: rotateY(90deg);
+        transform: rotateY(90deg);
+    }
+
+    50% {
+        -webkit-transform: rotateZ(90deg);
+        transform: rotateZ(90deg);
+    }
+
+    75% {
+        -webkit-transform: rotateY(90deg);
+        transform: rotateY(90deg);
+    }
+
+    100% {
+        -webkit-transform: rotateX(90deg);
+        transform: rotateX(90deg);
+    }
+}
+
+@-webkit-keyframes color {
+    0% {
+        border: 5px solid #333333;
+        background: #00F2AE;
+    }
+
+    25% {
+        border: 5px solid #00F2AE;
+        background: #333333;
+    }
+
+    50% {
+        border: 5px solid #333333;
+        background: #00F2AE;
+    }
+
+    75% {
+        border: 5px solid #00F2AE;
+        background: #333333;
+    }
+
+    100% {
+        border: 5px solid #333333;
+        background: #00F2AE;
+    }
+}
+
+@keyframes color {
+    0% {
+        border: 5px solid #333333;
+        background: #00F2AE;
+    }
+
+    25% {
+        border: 5px solid #00F2AE;
+        background: #333333;
+    }
+
+    50% {
+        border: 5px solid #333333;
+        background: #00F2AE;
+    }
+
+    75% {
+        border: 5px solid #00F2AE;
+        background: #333333;
+    }
+
+    100% {
+        border: 5px solid #333333;
+        background: #00F2AE;
+    }
+}
+
+/*# sourceMappingURL=spinner.css.map */
+
 /*Start global*/
 * {
     margin: 0;
@@ -365,65 +694,9 @@ li {
 
 /*End portfolio*/
 
-/*Start timeline*/
-.timeline ul {
-    border-left: 4px solid #00F2AE;
-    border-radius: 0.8rem;
-    background-color: rgba(0, 0, 0, 0.05);
-    margin: 0 auto;
-    position: relative;
-    padding: 5rem;
-    list-style: none;
-    text-align: left;
-    width: 70%;
-}
+/*Start experience*/
 
-.timeline h1 {
-    font-size: 2rem;
-    text-transform: uppercase;
-    font-weight: 300;
-    margin-bottom: 1rem;
-    opacity: 0.3;
-}
 
-.timeline .date {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    margin-bottom: 1rem;
-    padding-bottom: 1rem;
-    position: relative;
-}
-
-.timeline .date:last-of-type {
-    padding-bottom: 0;
-    margin-bottom: 0;
-    border: none;
-}
-
-.timeline .date::before,
-.date::after {
-    position: absolute;
-    display: block;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.timeline .date::before {
-    content: attr(data-date);
-    left: -21rem;
-    text-align: right;
-    min-width: 12rem;
-    font-size: 1.5rem;
-}
-
-.timeline .date::after {
-    content: "";
-    box-shadow: 0 0 0 4px #00F2AE;
-    border-radius: 100%;
-    left: -8rem;
-    height: 1.5rem;
-    width: 1.5rem;
-    background-color: #313534;
-}
 
 /*End timeline*/
 
