--- a/main.css
+++ b/main.css
@@ -10,6 +10,15 @@
     padding-top: 5%;
 }
 
+/*vertical line sidebar (left)*/
+.vl {
+    border-left: 6px solid green;
+    height: 500px;
+    position: absolute;
+    left: 50%;
+    top: 0;
+}
+
 .viewport {
     -webkit-perspective: 800px;
     -moz-perspective: 800px;
@@ -460,11 +469,16 @@ header {
 
 
 .main-left {
+    width: 150px;
+    position: fixed;
+    z-index: 1;
+    top: 300px;
+    left: 10px;
     background: transparent;
-    height: 1200px;
-    width: 20%;
-    float: left;
-    position: relative;
+    overflow-x: hidden;
+    padding: 8px 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .left-sticky {
@@ -473,11 +487,26 @@ header {
     top: 20px;
     height: 300px;
     width: 200px;
-    position: sticky;
-    -webkit-position: sticky;
+    float: left;
     display: flex;
+    flex-direction: column;
 }
 
+.left-sticky a {
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+.social-media i {
+    font-size: 3rem;
+    transition: color 650ms;
+}
+
+.social-media i:hover {
+    color: rgb(1, 134, 97);
+}
 
 .nav-list {
     list-style: none;
@@ -625,22 +654,6 @@ li {
     flex: 1;
 }
 
-.social-media {
-    margin-top: 5rem;
-}
-
-.social-media i {
-    font-size: 5rem;
-    transition: color 650ms;
-}
-
-.fa-facebook-square:hover {
-    color: #4267b2;
-}
-
-.fa-twitter-square:hover {
-    color: #3881f3;
-}
 
 /*End about*/
 
