--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 /*font import*/
-@import url('https://fonts.googleapis.com/css?family=Public+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Cutive+Mono|IBM+Plex+Mono|Oswald|Roboto|Roboto+Condensed|Staatliches|Roboto|Roboto+Mono|Public+Sans&display=swap');
 
 /*html background/denote universal selector*/
 *,
@@ -931,32 +931,20 @@ input[type="submit"]:hover {
 .copyright {
     width: 100%;
     text-align: center;
-    background-color: #1E1F20;
+    background-color: rgb(0, 0, 0);
+    font-family: 'IBM Plex Mono', monospace;
     padding: 2rem 0;
     position: relative;
 }
 
-.up {
-    position: absolute;
-    width: 5rem;
-    height: 5rem;
-    background-color: #eee;
-    top: -2.5rem;
-    right: 5rem;
-    border-radius: 100%;
-    display: flex;
-    animation: pulse 2s infinite;
-    cursor: pointer;
-}
-
-.up i {
-    color: #16162d;
-    font-size: 2rem;
-    margin: auto;
-}
-
 .copyright p {
-    font-size: 1.4rem;
+    font-size: 1.2rem;
+    color: #db963b
+}
+
+.copyright p:hover {
+    color: #dbac6f;
+    cursor: pointer;
 }
 
 /*End footer*/
