--- a/main.css
+++ b/main.css
@@ -72,10 +72,8 @@ header {
     transition: all 500ms ease 100ms;
 }
 
+/*end header/navbar setting*/
 /*main content*/
-
-
-
 
 #wrapper {
     padding-top: 5%;
@@ -689,7 +687,7 @@ li {
 }
 
 .bar {
-    background: linear-gradient(to right, #db963b; , #eee);
+    background: linear-gradient(to right, #db963b, #eee);
     width: 100%;
     height: 4px;
     border-radius: .8rem;
@@ -933,7 +931,7 @@ input[type="submit"]:hover {
     text-align: center;
     background-color: rgb(0, 0, 0);
     font-family: 'IBM Plex Mono', monospace;
-    padding: 2rem 0;
+    padding: 1.5rem 0;
     position: relative;
 }
 
