--- a/main.css
+++ b/main.css
@@ -875,57 +875,113 @@ li {
 
 /*End portfolio*/
 
-/*Start experience*/
-
-
-
-/*End timeline*/
-
-/*Start contact*/
-.contact {
-    background-color: #1E1F20;
+/*work experience starts*/
+/* Style the tab */
+.experience {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
-form {
-    width: 70%;
-    margin: 5rem auto;
+.work-exp-content {
+    padding: 20px;
+    margin: 0px;
+    border: 10px transparent;
 }
 
-.form label {
-    font-size: 1.5rem;
+.tab {
+    float: left;
+    border-left: 5px solid#b17930;
+    background-color: #2A2B2D;
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    height: 30rem;
 }
 
-input,
-select,
-textarea {
+/* Style the buttons inside the tab */
+.tab button {
+    display: flex;
+    background-color: inherit;
+    color: white;
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 14px;
+    padding: 15px 25px;
     width: 100%;
-    padding: 1rem;
-    margin-bottom: 5px;
     border: none;
-    outline-color: #db963b;
-    ;
-}
-
-input[type="submit"] {
-    width: initial;
-    background-color: #333333;
-    color: #eee;
-    padding: 1rem 2rem;
-    border: none;
-    border-radius: 0.8rem;
+    outline: none;
+    text-align: left;
     cursor: pointer;
-    transition: background-color 650ms;
+    transition: 0.3s;
+    height: 100px;
 }
 
-input[type="submit"]:hover {
-    color: #221e3f;
-    background-color: rgb(1, 134, 97);
-
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: rgb(37, 37, 37);
+    border-left: 20px solid#b17930;
+    color: #b17930;
+    font-size: 14px;
+    font-family: 'IBM Plex Mono', monospace;
 }
 
-/*End contact*/
+/* Create an active/current "tab button" class */
+
+/* Style the tab content */
+.tabcontent {
+    float: left;
+    padding: 20px 20px;
+    border: none;
+    background-color: rgb(0, 0, 0);
+    width: 70%;
+    border-left: none;
+    height: 30rem;
+}
+
+.tablinks .active {
+    color: #b17930;
+    background-color: rgb(37, 37, 37);
+}
+
+.tabcontent h1,
+h3,
+p {
+    font-family: 'IBM Plex Mono', monospace;
+}
+
+.tabcontent h1,
+h3 {
+    color: #b17930;
+    font-weight: none;
+}
+
+.tabcontent h1 {
+    font-size: 1.8em;
+}
+
+.tabcontent h3 {
+    font-size: 1.3em;
+}
+
+.tabcontent p {
+    font-size: 14px;
+}
+
+/*end workexperience*/
+
+
+/*photo section*/
+.photo {
+    margin-top: 600px;
+}
+
+/*photo seciton ends*/
+
+/*publications starts*/
+/*publication ends*/
 
 /*Start footer*/
+
 .copyright {
     width: 100%;
     text-align: center;
@@ -946,26 +1002,6 @@ input[type="submit"]:hover {
 }
 
 /*End footer*/
-
-/*Start animations*/
-@keyframes pulse {
-    0% {
-        box-shadow: 0 0 0 0 #db963b;
-        ;
-    }
-
-    70% {
-        box-shadow: 0 0 0 2rem #db963b;
-        ;
-    }
-
-    100% {
-        box-shadow: 0 0 0 0#db963b;
-        ;
-    }
-}
-
-/*End animations*/
 
 /*Start media queries*/
 
@@ -1093,55 +1129,3 @@ input[type="submit"]:hover {
 }
 
 /*End media queries*/
-
-
-/* Style the tab */
-
-
-
-.tab {
-    float: left;
-    border-left: 5px solid#db963b;
-    background-color: #2A2B2D;
-    width: 20%;
-    display: flex;
-    flex-direction: column;
-    height: 30rem;
-}
-
-/* Style the buttons inside the tab */
-.tab button {
-    display: flex;
-    background-color: inherit;
-    color: white;
-    padding: 15px 25px;
-    width: 100%;
-    border: none;
-    outline: none;
-    text-align: left;
-    cursor: pointer;
-    transition: 0.3s;
-    font-size: 17px;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-    background-color: rgb(77, 77, 77);
-    border-left: 20px solid #db963b;
-    ;
-}
-
-/* Create an active/current "tab button" class */
-.tab button.active {
-    background-color: #ccc;
-}
-
-/* Style the tab content */
-.tabcontent {
-    float: left;
-    padding: 0px 12px;
-    border: 1px solid #ccc;
-    width: 50%;
-    border-left: none;
-    height: 30rem;
-}
