--- a/main.css
+++ b/main.css
@@ -716,17 +716,7 @@ li {
     transform: rotate(-450deg) translateX(-.8rem);
 }
 
-.landing-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    text-align: center;
-    z-index: 1;
-}
-
-.landing-text h1 {
+.title-heading h1 {
     font-size: 10rem;
     font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
