--- a/main.css
+++ b/main.css
@@ -515,6 +515,7 @@ img {
 .section-heading h6 {
     font-size: 1.6rem;
     font-weight: 300;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .has-margin-right {
@@ -686,7 +687,7 @@ li {
     transform: rotate(-45deg);
 }
 
-.bar {
+/* .bar {
     background: linear-gradient(to right, #db963b, #eee);
     width: 100%;
     height: 4px;
@@ -714,7 +715,7 @@ li {
 
 .open .bar.end {
     transform: rotate(-450deg) translateX(-.8rem);
-}
+} */
 
 .title-heading h1 {
     font-size: 10rem;
@@ -819,8 +820,6 @@ li {
     align-items: center;
     justify-content: center;
     margin-bottom: 5rem;
-
-
 }
 
 .portfolio-item:last-child {
@@ -961,9 +960,72 @@ h3 {
 
 
 /*photo section*/
-.photo {
-    margin-top: 600px;
-}
+.slidershow{
+    width: 700px;
+    height: 400px;
+    overflow: hidden;
+    margin-top: 300px;
+  }
+  .middle{
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+  }
+  .navigation{
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+  }
+  .bar{
+    width: 50px;
+    height: 10px;
+    border: 2px solid #fff;
+    margin: 6px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  .bar:hover{
+    background: #fff;
+  }
+  
+  input[name="r"]{
+      position: absolute;
+      visibility: hidden;
+  }
+  
+  .slides{
+    width: 500%;
+    height: 100%;
+    display: flex;
+  }
+  
+  .slide{
+    width: 20%;
+    transition: 0.6s;
+  }
+  .slide img{
+    width: 100%;
+    height: 100%;
+  }
+  
+  #r1:checked ~ .s1{
+    margin-left: 0;
+  }
+  #r2:checked ~ .s1{
+    margin-left: -20%;
+  }
+  #r3:checked ~ .s1{
+    margin-left: -40%;
+  }
+  #r4:checked ~ .s1{
+    margin-left: -60%;
+  }
+  #r5:checked ~ .s1{
+    margin-left: -80%;
+  }
 
 /*photo seciton ends*/
 
