--- a/main.css
+++ b/main.css
@@ -485,7 +485,7 @@ img {
 
 .section-heading h1 {
     font-size: 3.5rem;
-    color: rgba(255, 255, 255, .3);
+    color: #db963b;
     text-transform: uppercase;
     font-weight: 300;
     position: relative;
@@ -509,7 +509,7 @@ img {
 }
 
 .section-heading h6 {
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     font-weight: 300;
     font-family: 'Courier New', Courier, monospace;
 }
