--- a/main.css
+++ b/main.css
@@ -36,6 +36,10 @@ header {
     border-radius: 10px;
 }
 
+.emphasis_intro{
+    color:  #db963b;
+}
+
 .nav__links {
     list-style: none;
 }
@@ -167,7 +171,7 @@ header {
 
 .paragraph-section {
     font-family: 'IBM Plex Mono', monospace;
-    line-height: 25px;
+    line-height: 20px;
     text-align: justify;
     text-justify: inter-word;
 }
