--- a/main.css
+++ b/main.css
@@ -847,7 +847,7 @@ li {
     width: 30%;
     display: flex;
     flex-direction: column;
-    height: 30rem;
+    height: 35rem;
 }
 
 /* Style the buttons inside the tab */
@@ -886,7 +886,7 @@ li {
     background-color: rgb(0, 0, 0);
     width: 70%;
     border-left: none;
-    height: 30rem;
+    height: 35rem;
 }
 
 .tablinks .active {
@@ -895,13 +895,13 @@ li {
 }
 
 .tabcontent h1,
-h3,
-p {
+h2,h3,
+ul {
     font-family: 'IBM Plex Mono', monospace;
 }
 
 .tabcontent h1,
-h3 {
+h2 {
     color: #b17930;
     font-weight: none;
 }
@@ -914,8 +914,8 @@ h3 {
     font-size: 1.3em;
 }
 
-.tabcontent p {
-    font-size: 14px;
+.tabcontent ul {
+    font-size: 13px;
 }
 
 /*end workexperience*/
