--- a/main.css
+++ b/main.css
@@ -844,6 +844,7 @@ li {
 }
 
 .work-exp-content {
+    /* padding: 20px; */
     margin: 0px;
     border: 10px transparent;
 }
@@ -901,13 +902,6 @@ li {
     color: #b17930;
     background-color: rgb(37, 37, 37);
 }
-
-.tabcontent h1, h2, h3, ul {
-    margin: 0px 15px;
-    border: none;
-    padding: none;
-}
-
 
 .tabcontent h1,
 h2,h3,
@@ -1018,6 +1012,7 @@ h3 {
   .listoftools {
       color: #b17930;
       font-family: 'IBM Plex Mono', monospace;
+      font-size: 12px;
   }
 
   .back-para {
@@ -1131,13 +1126,14 @@ h3 {
   }
   
   .flip-box-header {
-    font-size: 20px;
-    text-transform: uppercase;
+    font-size: 15px;
   }
   
   .flip-box p {
     font-size: 1.3em;
-    line-height: 1.5em;
+    line-height: 1em;
+    margin-top: 15px;
+    font-family: 'IBM Plex Mono', monospace;
   }
   
   .flip-box-img {
