--- a/views/index.html
+++ b/views/index.html
@@ -39,7 +39,7 @@
         </li>
       </ul>
     </nav> -->
-    <img class="logo" src="/images/elsielogo.png" alt="logo">
+    <img class="logo" src="/images/elsielogo.PNG" alt="logo">
     <nav>
       <ul class="nav__links">
         <li><a href="#about">About</a></li>
