--- a/views/index.html
+++ b/views/index.html
@@ -57,7 +57,7 @@
     <section class="block title-heading">
       <h1>Elsie Cho</h1>
       <div class=" dimension">
-        <span class="text font"> Why don't we live above our expectation and beyond our imagination?</span>
+        <span class="text font"> Live above our expectation and beyond our imagination?</span>
       </div>
       <div id="wrapper">
         <div class="viewport">
@@ -190,7 +190,7 @@
               </div>
               <div>
                 <div id="cj" class="tabcontent">
-                  <h1>Personal Projects</h1>
+                  <h1>Elsiemade</h1>
                   <h2>Full-Stack Web Developer</h2>
                   <h3>Oct 2018 - Present</h3>
                   <br>
@@ -210,8 +210,8 @@
                   <ul>
                     <li><a class="emphasis_intro">[Thesis]</a>: Improving a prototype of enzymatic fuel cell using laccase-based biocathode on novel/ graphitizing-carbon materials.</li><br>
                     <li>Developed a method to functionalize electrospun carbon nanofibers to study the electrochemical behavior for biosensors and biofuel cells application.</li><br>
-                    <li><a class="emphasis_intro">[Project-II]</a>: Developing an iodide ion nanosensor for monitoring thyroid deficiency disorder.</li><br>
-                    <li><a class="emphasis_intro">[Project-III]</a>: Building a SMART water filteration system using graphitic carbon membranes to filter and sense contaminants in drinking and wastewater.</li>
+                    <li><a class="emphasis_intro">[Project-B]</a>: Developing an iodide ion nanosensor for monitoring thyroid deficiency disorder.</li><br>
+                    <li><a class="emphasis_intro">[Project-C]</a>: Building a SMART water filteration system using graphitic carbon membranes to filter and sense contaminants in drinking and wastewater.</li>
                   </ul>
                 </div>
                 <div id="thermo" class="tabcontent">
