--- a/views/index.html
+++ b/views/index.html
@@ -57,7 +57,7 @@
     <section class="block title-heading">
       <h1>Elsie Cho</h1>
       <div class=" dimension">
-        <span class="text font"> Live above our expectation and beyond our imagination?</span>
+        <span class="text font"> "Live above your expectation and beyond your imagination"</span>
       </div>
       <div id="wrapper">
         <div class="viewport">
@@ -127,7 +127,7 @@
           </li>
           
         </ul>
-        <div class="vl"></div>
+        <div class="vl-left"></div>
       </div>
     </div>
     <!--right section: email-->
@@ -170,7 +170,7 @@
             <div class="container" data-aos="fade-down" data-aos-delay="300">
               <div class="tab">
                 <button class="tablinks" onclick="openCity(event, 'cj')" id="defaultOpen">
-                  Full-Stack Web Developer
+                  Full-Stack
                 </button>
                 <button class="tablinks" onclick="openCity(event, 'biomems')">
                   BioMEMS/Carbon-MEMS
@@ -190,7 +190,7 @@
               </div>
               <div>
                 <div id="cj" class="tabcontent">
-                  <h1>Elsiemade</h1>
+                  <h1>Personal Projects</h1>
                   <h2>Full-Stack Web Developer</h2>
                   <h3>Oct 2018 - Present</h3>
                   <br>
@@ -209,7 +209,7 @@
                   <br>
                   <ul>
                     <li><a class="emphasis_intro">[Thesis]</a>: Improving a prototype of enzymatic fuel cell using laccase-based biocathode on novel/ graphitizing-carbon materials.</li><br>
-                    <li>Developed a method to functionalize electrospun carbon nanofibers to study the electrochemical behavior for biosensors and biofuel cells application.</li><br>
+                    <li>Developed a method to functionalize electrospun carbon nanofibers to study the electrochemical behavior for biosensors and biofuel cells applications.</li><br>
                     <li><a class="emphasis_intro">[Project-B]</a>: Developing an iodide ion nanosensor for monitoring thyroid deficiency disorder.</li><br>
                     <li><a class="emphasis_intro">[Project-C]</a>: Building a SMART water filteration system using graphitic carbon membranes to filter and sense contaminants in drinking and wastewater.</li>
                   </ul>
@@ -275,7 +275,7 @@
                 <div class="flip-box-front text-center" style="background-color:black;">
                   <div class="inner color-white">
                     <h3 class="flip-box-header">Task-IT</h3>
-                    <p>A multi-platform task management tool.</p>
+                    <p>Built a multi-platform task management tool.</p>
                   </div>
                 </div>
                 <div class="flip-box-back text-center" style="background-color:black;">
@@ -325,7 +325,7 @@
                 <div class="flip-box-front text-center" style="background-color:black;">
                   <div class="inner color-white">
                     <h3 class="flip-box-header">ELSIEMADE</h3>
-                    <p>A simple website for my photography collection of my favorite moments in life.
+                    <p>My photography collection website of the favorite moments in my life.
                     </p>
                   </div>
                 </div>
@@ -374,7 +374,7 @@
                 <div class="flip-box-front text-center filter-" style="background-color:black;">
                   <div class="inner color-white">
                     <h3 class="flip-box-header">Ion Sensor on Carbon nanostructures</h3>
-                    <p>Sensing Iodine on graphitic carbon nanofibers. </p>
+                    <p><b style="text-decoration: underline;">Lead Author</b>: Sensing Iodine on graphitic carbon nanofibers. </p>
                   </div>
                 </div>
                 <div class="flip-box-back text-center" style="background-color:black;">
@@ -390,7 +390,7 @@
                 <div class="flip-box-front text-center filter-" style="background-color:black;">
                   <div class="inner color-white">
                     <h3 class="flip-box-header">Biofuel cell on carbon membranes</h3>
-                    <p>A graphitic Carbon-based biofuel cell for electricity and energy storage.</p>
+                    <p><b style="text-decoration: underline;">Lead Author</b>: A graphitic Carbon-based biofuel cell for electricity and energy storage.</p>
                   </div>
                 </div>
                 <div class="flip-box-back text-center" style="background-color:black;">
@@ -419,6 +419,19 @@
             </div>
           </div>
         </div>
+    </section>
+    <section class="contact" id="contact">
+      <div class="container">
+        <div class="section-heading">
+          <h1>Contact</h1>
+        </div>
+        <div class="about-details" data-aos="fade-down" data-aos-delay="600">
+          <br />
+          <p class="paragraph-section contact">
+            My inbox is always open for potential collaborations and new friends. </br> <a class="emphasis_intro contact-link" href="mailto:eunbyuc@gmail.com?subject=subject text">Get in touch with me!</a>
+          </p>
+        </div>
+      </div>
     </section>
     <!-- <section class="photo" id="photo">
         <div class="container">
