--- a/public/main.css
+++ b/public/main.css
@@ -557,11 +557,11 @@ img {
 /*LEFTBAR */
 
 /*vertical line sidebar (left)*/
-.vl {
+.vl-left{
     content: "";
     display: block;
     width: 1px;
-    height: 90px;
+    height: 300px;
     background-color: rgb(168, 178, 209);
     margin: 0px auto;
     box-sizing: inherit;
@@ -625,7 +625,7 @@ li {
     content: "";
     display: block;
     width: 1px;
-    height: 150px;
+    height: 300px;
     background-color: rgb(168, 178, 209);
     margin: 0px auto;
     box-sizing: inherit;
@@ -1155,12 +1155,20 @@ h3 {
 
 /*portfolio ends*/
 
+
+/*contact*/
+.contact {
+    font-size: 16px;
+    text-align: center;
+}
+/*contact ends*/
+
 /*Start footer*/
 
 .copyright {
     width: 100%;
     text-align: center;
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.301);
     font-family: 'IBM Plex Mono', monospace;
     padding: 1.5rem 0;
     position: relative;
